--- a/.github/workflows/deploy-staging.yml
+++ b/.github/workflows/deploy-staging.yml
@@ -99,3 +99,6 @@ jobs:
             az logout
             az cache purge
             az account clear
+              - name: Azure Login
+                uses: Azure/login@v1.4.6
+            
