--- a/.github/workflows/spinup-destroy.yml
+++ b/.github/workflows/spinup-destroy.yml
@@ -56,8 +56,9 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      - name: Azure login
-        uses: azure/login@v1
+      - name: Azure Login
+        uses: Azure/login@v1.4.6
+            
         with:
           creds: ${{ secrets.AZURE_CREDENTIALS }}
 
